--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,12 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "...",
-    "mongoose": "...",
-    "cors": "...",
-    "dotenv": "...",
-    "multer": "...",
-    "bcryptjs": "...",
-    "jsonwebtoken": "..."
+    "express": "^4.21.0",
+    "mongoose": "^8.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.0",
+    "multer": "^1.4.5-lts.1",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2"
   }
 }
